--- a/css/modules/_slider.scss
+++ b/css/modules/_slider.scss
@@ -165,6 +165,10 @@
         i {
             font-size: 1.5rem;
             color: $dark-orange;
+            transition: color 0.3s ease-in-out;
+            &:hover {
+                color: $dark-red;
+            }
         }
     }
 }
